@@ -14,6 +14,9 @@
 #include "scno.h"
 #include <linux/sched.h>
 
+#include "xstring.h"
+#include <unistd.h>
+
 #include "xlat/clone_flags.h"
 #include "xlat/clone3_flags.h"
 #include "xlat/setns_types.h"
@@ -53,6 +56,79 @@
 # define ARG_CTID	4
 #endif
 
+static bool show_namespace = false;
+extern void namespace_auxstr_init(void)
+{
+	show_namespace = true;
+}
+
+/* derived from print_dirfd */
+static const char *
+read_namespace_id(int pid, const char *const ns_type)
+{
+	static const char ns_path[] = "/proc/%d/ns/%s";
+	/* "cgroup" is the longest name in the dentries in /proc/$pid/ns. */
+	char linkpath[sizeof(ns_path) + sizeof(int) * 3 + sizeof("cgroup")];
+	xsprintf(linkpath, ns_path, pid, ns_type);
+
+	static char buf[PATH_MAX + 1];
+	ssize_t n = readlink(linkpath, buf, sizeof(buf));
+	if ((size_t) n >= sizeof(buf))
+		return NULL;
+	buf[n] = '\0';
+	return buf;
+}
+
+static const char *
+get_namespace_auxstr(int pid, uint64_t flags,
+		     struct tcb *const tcp_for_pid_translation)
+{
+	static char str[sizeof("cgroup:[4026531835], "
+			          "ipc:[4026531839], "
+			          "mnt:[4026531841], "
+			          "net:[4026531840], "
+			          "pid:[4026531836], "
+			         "time:[4026531834], "
+			         "user:[4026531837], "
+			          "uts:[4026531838]" )];
+	char *p = str;
+
+	static const struct {
+		uint64_t flags;
+		const char *str;
+	} ns[] = {
+		{ CLONE_NEWCGROUP | CLONE_INTO_CGROUP, "cgroup" },
+		{ CLONE_NEWIPC, "ipc" },
+		{ CLONE_NEWNS, "mnt" },
+		{ CLONE_NEWNET, "net" },
+		{ CLONE_NEWPID, "pid" },
+		{ CLONE_NEWTIME, "time" },
+		{ CLONE_NEWUTS, "uts" },
+		{ CLONE_NEWUSER, "user" },
+	};
+
+	if (tcp_for_pid_translation) {
+		int proc_pid;
+		if (translate_pid(tcp_for_pid_translation, pid, PT_TID, &proc_pid) == 0)
+			return NULL;
+		pid = proc_pid;
+	}
+
+	*p = '\0';
+	for (size_t i = 0; i < ARRAY_SIZE(ns); ++i) {
+		if (flags & ns[i].flags) {
+			const char *ns_name = read_namespace_id(pid, ns[i].str);
+			if (ns_name) {
+				if (str != p)
+					p = xappendstr(str, p, ", ");
+				p = xappendstr(str, p, "%s", ns_name);
+			}
+		}
+	}
+
+	return (str != p) ? str : NULL;
+}
+
 static void
 print_tls_arg(struct tcb *const tcp, const kernel_ulong_t addr)
 {
@@ -71,6 +147,11 @@ print_tls_arg(struct tcb *const tcp, const kernel_ulong_t addr)
 SYS_FUNC(clone)
 {
 	const kernel_ulong_t flags = tcp->u_arg[ARG_FLAGS] & ~CSIGNAL;
+	const kernel_ulong_t nsflags = show_namespace
+		? (CLONE_NEWCGROUP|CLONE_NEWIPC|CLONE_NEWNS|CLONE_NEWNET
+		   |CLONE_NEWPID|CLONE_NEWTIME|CLONE_NEWUTS|CLONE_NEWUSER)
+		: 0;
+	int r_extra = 0;
 
 	if (entering(tcp)) {
 		const unsigned int sig = tcp->u_arg[ARG_FLAGS] & CSIGNAL;
@@ -114,7 +195,8 @@ SYS_FUNC(clone)
 		 * use of this flag which we should respect.
 		 */
 		if ((flags & (CLONE_PARENT_SETTID|CLONE_PIDFD|CLONE_CHILD_SETTID
-			      |CLONE_CHILD_CLEARTID|CLONE_SETTLS)) == 0)
+			      |CLONE_CHILD_CLEARTID|CLONE_SETTLS
+			      |nsflags)) == 0)
 			return RVAL_DECODED | RVAL_TID;
 	} else {
 		if (flags & (CLONE_PARENT_SETTID|CLONE_PIDFD)) {
@@ -140,8 +222,13 @@ SYS_FUNC(clone)
 			printaddr(tcp->u_arg[ARG_CTID]);
 			tprint_arg_name_end();
 		}
+		if (show_namespace && tcp->u_rval >= 0) {
+			tcp->auxstr = get_namespace_auxstr((int)tcp->u_rval, flags, tcp);
+			if (tcp->auxstr)
+				r_extra = RVAL_STR;
+		}
 	}
-	return RVAL_TID;
+	return RVAL_TID | r_extra;
 }
 
 static void
@@ -162,6 +249,12 @@ SYS_FUNC(clone3)
 	kernel_ulong_t fetch_size;
 
 	fetch_size = MIN(size, sizeof(arg));
+
+	const uint64_t nsflags = show_namespace
+		? (CLONE_NEWCGROUP|CLONE_INTO_CGROUP|CLONE_NEWIPC|CLONE_NEWNS|CLONE_NEWNET
+		   |CLONE_NEWPID|CLONE_NEWTIME|CLONE_NEWUTS|CLONE_NEWUSER)
+		: 0;
+	int r_extra = 0;
 
 	if (entering(tcp)) {
 		if (fetch_size < minsz) {
@@ -246,7 +339,7 @@ SYS_FUNC(clone3)
 
 		tprint_struct_end();
 
-		if ((arg.flags & (CLONE_PIDFD | CLONE_PARENT_SETTID)) ||
+		if ((arg.flags & (CLONE_PIDFD | CLONE_PARENT_SETTID | nsflags)) ||
 		    (size > fetch_size))
 			return RVAL_TID;
 
@@ -297,27 +390,53 @@ SYS_FUNC(clone3)
 	if (prefix_fun != tprint_value_changed_struct_begin)
 		tprint_struct_end();
 
+	if (show_namespace && tcp->u_rval >= 0) {
+		tcp->auxstr = get_namespace_auxstr(tcp->u_rval, arg.flags, tcp);
+		if (tcp->auxstr)
+			r_extra = RVAL_STR;
+	}
+
 out:
 	tprint_arg_next();
 	PRINT_VAL_U(size);
 
-	return RVAL_DECODED | RVAL_TID;
+	return RVAL_DECODED | RVAL_TID | r_extra;
 }
 
 
 SYS_FUNC(setns)
 {
-	printfd(tcp, tcp->u_arg[0]);
-	tprint_arg_next();
-	printflags(setns_types, tcp->u_arg[1], "CLONE_NEW???");
+	if (entering(tcp)) {
+		printfd(tcp, tcp->u_arg[0]);
+		tprint_arg_next();
+		printflags(setns_types, tcp->u_arg[1], "CLONE_NEW???");
+		return show_namespace ? 0: RVAL_DECODED;
+	}
 
-	return RVAL_DECODED;
+	int r_extra = 0;
+	if (show_namespace && tcp->u_rval == 0) {
+		tcp->auxstr = get_namespace_auxstr(tcp->pid, tcp->u_arg[1], NULL);
+		if (tcp->auxstr)
+			r_extra = RVAL_STR;
+	}
+	return RVAL_DECODED | r_extra;
+
 }
 
 SYS_FUNC(unshare)
 {
-	printflags64(unshare_flags, tcp->u_arg[0], "CLONE_???");
-	return RVAL_DECODED;
+	if (entering(tcp)) {
+		printflags64(unshare_flags, tcp->u_arg[0], "CLONE_???");
+		return show_namespace ? 0: RVAL_DECODED;
+	}
+
+	int r_extra = 0;
+	if (show_namespace && tcp->u_rval == 0) {
+		tcp->auxstr = get_namespace_auxstr(tcp->pid, tcp->u_arg[0], NULL);
+		if (tcp->auxstr)
+			r_extra = RVAL_STR;
+	}
+	return RVAL_DECODED | r_extra;
 }
 
 SYS_FUNC(fork)
