@@ -633,6 +633,16 @@ qualify_kvm(const char *const str)
 	}
 }
 
+void
+qualify_namespace(const char *const str)
+{
+	if (strcmp(str, "new") == 0) {
+		namespace_auxstr_init();
+	} else {
+		error_msg_and_die("invalid -e namespace= argument: '%s'", str);
+	}
+}
+
 #ifdef ENABLE_SECONTEXT
 struct number_set *secontext_set;
 
@@ -699,6 +709,7 @@ static const struct qual_options {
 	{ "decode-pid",	qualify_decode_pid },
 	{ "decode-pids", qualify_decode_pid },
 	{ "secontext",  qualify_secontext },
+	{ "namespace",  qualify_namespace },
 };
 
 void
